# TradeBot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Config.py  Doxyfile  README.md  TdApi.py  TradeBot.py  app.js  config.js  ideation.md  package-lock.json  package.json  setup.py
Authentication/: authenticate.py  authentication_utils.py
Broker/: Account.py  Authentication.py  Broker.py  User.py
Broker/TdAmeritrade/: Account.py  Authentication.py  Configuration.py  User.py  __init__.py
BuildingBlocks/: Options.py
Components/DataSource/: app.js  configuration.js  package-lock.json  providers.js
Components/DataSource/Providers/: tdameritrade.js
Components/DataSource/Sources/: provider.js
Components/DataSource/routes/: datasource.js
Credentials/: tdameritrade.json.example
DataSource/: app.js  configuration.js  package.json
DataSource/Sources/: tdameritrade.js
Documentation/: accounts.json  get-instrument.json  initialization.sql  tdapi-fundamentals.md
Fundamentals/: Options.py  Securities.py
Repository/: Storage.py  __init__.py
Tools/: accounts.json  accounts.py  authentication_server.py  download_training_data.js  trading.py
cmake/: FindSOCI.cmake  googletest-download.cmake  googletest.cmake  quantlib-download.cmake  quantlib.cmake  soci-download.cmake  soci.cmake
res/: CMakeLists.txt  bins.cpp  genres.py
res/sql/: BrokerageAccount.sql  Orders.sql  Positions.sql  TDAmeritradeAuthentication.sql  Types.sql  configuration.sql  equity_time_point.sql  notes.md  order.sql  tdameritrade_order.sql  tdameritrade_root_account.sql  tdameritrade_trading_account.sql  time_point.sql  user.sql
routes/: auth.js
src/: CMakeLists.txt  Configuration.h  TradeBot.cpp  TradeBot.h  TradeBot.py  account.h  accounts.py  brokerage.cpp  brokerage.h  database.cpp  database.h  https_abstraction.cpp  https_abstraction.h  main.cpp  skiplistdb.cpp  skiplistdb.h  stringutils.cpp  stringutils.h  td_config.py  tdconfig.py  tradebot_config.py  user.py  web_essentials.cpp  web_essentials.h
src/Authentication/: reauth.js
src/Models/: readme.md
src/TdAmeritrade/: CMakeLists.txt  authenticationsvr.cpp  authenticationsvr.h
src/TradeBot/: CMakeLists.txt  TradeBot.cpp  TradeBot.h  account.h  authentication.h  brokerage.cpp  brokerage.h  database.cpp  database.h  database_connection.cpp  database_connection.h  user.h  webapi.cpp  webapi.h
src/fred/: fred.h
src/quant/: quote.h
src/res/: CMakeLists.txt  bins.cpp  bins.h  genres.py
src/res/sql/: company_fundamentals.sql  configuration.sql  fundamentals.sql  instrument_time_series.sql  notes.md  order_history.sql  positions.sql  tdameritrade_authentication.sql  tdameritrade_order.sql  tdameritrade_root_account.sql  tdameritrade_trading_account.sql  user.sql
src/sql/: create_users_table.sql
src/tdapi/: CMakeLists.txt  account.h  api.h  authentication.cpp  authentication.h  authentication_server.cpp  authentication_server.h  authenticationsvr.cpp  authenticationsvr.h  streaming.h
src/utilities/: CMakeLists.txt  fromstring.h  observable.cpp  observable.h  skiplistdb.cpp  skiplistdb.h  stringutils.cpp  web_essentials.cpp
targets/: CMakeLists.txt  InitializeTradebotDatabase.cpp  TDAuthenticationServer.cpp  TdAuthSvr.cpp  TradeBot.cpp
tdapi/: package.json
test/: CMakeLists.txt  main.cpp  test_observable.cpp  test_stringutils.cpp  test_web_essentials.cpp
tradebot/: README.md  app.js  config.js  package-lock.json  package.json
tradebot-ui/: package-lock.json  package.json
tradebot-ui/src/: App.css  App.js  SidebarMenu.js  apiconf.js
tradebot-ui/src/components/: Error.js  Home.js  Login.js  PageLayout.js  TBLogo.js
tradebot/components/configuration/: configuration.js
tradebot/components/database/: apikey.js  apikeys.js  configuration.js  postgres.js  user.js  users.js
tradebot/components/webapi/: apiauth.js  auth.js  user.js  webapi.js
tradebot/core/broker/common/: broker.js
tradebot/core/broker/tdameritrade/: tdameritrade.js
tradebot/models/: configuration.js  user.js
tradebot/routes/: authenticators.js  data.js  index.js  trading.js
